<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="414dp"
        android:layout_height="206dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FavDishes"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/fav_dish_scroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="323dp"
                android:layout_height="151dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:background="#c1c1c1"
                android:contentDescription="@string/brickyard_burger_owasso"
                android:scaleType="fitXY"
                android:src="@drawable/brickyard_burger" />

            <ImageView
                android:layout_width="319dp"
                android:layout_height="151dp"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:background="#c1c1c1"
                android:contentDescription="@string/steak"
                android:scaleType="fitXY"
                android:src="@drawable/steak" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="151dp"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:background="#c1c1c1"
                android:contentDescription="@string/quesadilla"
                android:scaleType="fitXY"
                android:src="@drawable/quesadilla_owasso" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#302D2D"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/dishfinder"
        android:textColor="#AF1616"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchView"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/popular_dishes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#1B1818"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/omelettes"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="408dp"
        android:layout_height="185dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/FavDishes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/pop_dish_scroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="323dp"
                android:layout_height="151dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:background="#c1c1c1"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/omelette_wh" />

            <ImageView
                android:layout_width="319dp"
                android:layout_height="151dp"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:background="#c1c1c1"
                android:contentDescription="@string/omelette2"
                android:scaleType="fitXY"
                android:src="@drawable/omelette_dennys_philly" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="151dp"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:background="#c1c1c1"
                android:contentDescription="@string/omelette3"
                android:scaleType="fitXY"
                android:src="@drawable/omelette_ihop" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/FavDishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_dishes_true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#221D1D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>